doc: add openapi swagger docs to product endpoints
