# internal/presenter/controller/product_controller.go
@@ -39,6 +39,17 @@ func NewProductController(db *gorm.DB, mux *chi.Mux) *ProductUseCases {
 	}
 }
 
+// Create Product godoc
+// @Summary Create a new product
+// @Description Create a new product
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param request body dto.CreateProductInput true "product request"
+// @Success 201 {string} string "Product created"
+// @Failure 500 {string} string "Internal server error"
+// @Router /product [post]
+// @Security apiKeyAuth
 func (p *ProductUseCases) createProductHandler(w http.ResponseWriter, r *http.Request) {
 	err := p.CreateProduct.Execute(r)
 	if err != nil {
@@ -50,6 +61,18 @@ func (p *ProductUseCases) createProductHandler(w http.ResponseWriter, r *http.Re
 	w.Write([]byte("Product created"))
 }
 
+// Find Product by ID godoc
+// @Summary Find product by ID
+// @Description Find product by ID
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID"
+// @Success 200 {object} entity.Product
+// @Failure 400 {string} {object} Error
+// @Failure 500 {string} {object} Error
+// @Router /product/{id} [get]
+// @Security apiKeyAuth
 func (p *ProductUseCases) findProductHandler(w http.ResponseWriter, r *http.Request) {
 	prd, err := p.FindProductById.Execute(r)
 	if err != nil {
@@ -61,6 +84,19 @@ func (p *ProductUseCases) findProductHandler(w http.ResponseWriter, r *http.Requ
 	json.NewEncoder(w).Encode(prd)
 }
 
+// Find All Products godoc
+// @Summary Find all products
+// @Description Find all products
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param page query string false "page number"
+// @Param limit query string false "limit of products"
+// @Success 200 {array} entity.Product
+// @Failure 400 {string} {object} Error
+// @Failure 500 {string} {object} Error
+// @Router /product [get]
+// @Security apiKeyAuth
 func (p *ProductUseCases) findAllProductsHandler(w http.ResponseWriter, r *http.Request) {
 	products, err := p.FindAllProducts.Execute(r)
 	if err != nil {
@@ -72,6 +108,19 @@ func (p *ProductUseCases) findAllProductsHandler(w http.ResponseWriter, r *http.
 	json.NewEncoder(w).Encode(products)
 }
 
+// Update Product godoc
+// @Summary Update a product
+// @Description Update a product
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID"
+// @Param request body dto.CreateProductInput true "product request"
+// @Success 200 {object} entity.Product
+// @Failure 400 {string} {object} Error
+// @Failure 500 {string} {object} Error
+// @Router /product/{id} [put]
+// @Security apiKeyAuth
 func (p *ProductUseCases) updateProductHandler(w http.ResponseWriter, r *http.Request) {
 	prd, err := p.UpdateProduct.Execute(r)
 	if err != nil {
@@ -83,6 +132,18 @@ func (p *ProductUseCases) updateProductHandler(w http.ResponseWriter, r *http.Re
 	json.NewEncoder(w).Encode(prd)
 }
 
+// Delete Product godoc
+// @Summary Delete a product
+// @Description Delete a product
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID"
+// @Success 200 {string} string "Product deleted"
+// @Failure 400 {string} {object} Error
+// @Failure 500 {string} {object} Error
+// @Router /product/{id} [delete]
+// @Security apiKeyAuth
 func (p *ProductUseCases) deleteProductHandler(w http.ResponseWriter, r *http.Request) {
 	err := p.DeleteProduct.Execute(r)
 	if err != nil {
